--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,18 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body, html{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
 /* CSS responsável pelo menu lateral*/
 
 .trainer-sidenav{
     height: 100%;
-    width: 265px;
+    width: 20%;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -43,19 +50,15 @@
     padding: 0px;
 }
 
-.player-info li{
+.user-name, .user-location, .user-lvl {
     padding: 3px;
     color: white;
     font-size: 14px;
 }
 
-.player-info li:nth-child(2){
-    padding-bottom: 13px;
+.user-lvl{
+    padding: 8px 0px 10px 0px;
     font-size: 12px;
-}
-
-.player-info li:last-child{
-    padding-top: 20px;
 }
 
 #selected{
@@ -77,18 +80,50 @@
     margin: 0 auto;
     border-radius: 10px 10px 10px 10px;
     overflow: hidden;
+    position: relative;
 }
 
-.exp-user{
-    text-align: center;
+.pkmxp-wrapper{
+    background-color: #E1E1E1;
+}
+
+.exp-bar{
+
     color: white;
     line-height: 15px;
     font-size: 10px;
+    
 }
 
-.xp{
+.xp-user{
    width: 70%;
    background-color: #64BFDE;
+   -webkit-animation: xpgrow 1s infinite; /* Safari */
+   animation: xpgrow 2s;
+}
+
+.xp-pokemon{
+    width: 70%;
+    background-color: #F7CF53;
+    -webkit-animation: xpgrow 1s infinite; /* Safari */
+    animation: xpgrow 2s;
+}
+
+.xp-value{
+    background-color: transparent;
+    border: none;
+    padding: 0px 15px 0px 5px;
+    color: #3f3f3f; 
+    position: absolute; 
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+
+}
+
+.current-xp{
+    width: 10px;
 }
 
 .tittle-app{
@@ -97,3 +132,293 @@
 }
 
 /* CSS responsável pelo menu lateral */
+
+/* CSS responsável pelo wrapper que engloba todo os conteudos sobre os pokemons */
+
+#main-content{
+    width: 80%;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    background: #FAFAFA;
+}
+
+/* CSS responsável pelo wrapper que engloba todo os conteudos sobre os pokemons */
+
+/* CSS responsável pela barra de busca dos Pokemons na API */
+
+.search-wrapper{
+    height: 50px;
+    width: 100%;
+    border-bottom: 1px solid #C9C9CA;
+    margin-bottom: 10px;
+}
+
+/* CSS responsável pela barra de busca dos Pokemons na API */
+
+/* CSS responsável pelas divs que contem os dados dos pokemons */
+
+.pokemon-wrapper{
+    width: 100%;
+    min-height: 100%;
+    margin: 0 auto;
+    border: 1px solid grey;
+}
+
+.pokemon-info{
+    width: 350px;
+    height: 370px;
+    border: 1px solid grey;
+    display: inline-block;
+    margin: 10px;
+    position: relative;
+}
+
+.pokemon-info:nth-child(1){
+    width: 250px;
+}
+
+.pokemon-stats{
+
+}
+
+.info-container{
+    border: 1px solid grey;
+    width: 80%;
+    margin: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.pkmxp-bar{
+    margin: 8px;
+}
+
+.pokemon-picture{
+    margin: 0 auto;
+    display: block;
+}
+
+.pokemon-name{
+    color: #3C3C3C;
+    font-weight: 700;
+}
+
+.pokemon-lvl{
+    font-size: 12px;
+    color: #6C6C6C;
+}
+
+.attribute-wrapper{
+    width: 100%;
+    height: 100px;
+    background-color: red;
+    position: absolute;
+    bottom: 0;
+}
+
+.pokemon-attributes{
+    display: inherit;
+    width: 80%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.attribute-content{
+    word-break: break-word;
+    margin: 0px;
+    display: inline-block;
+}
+
+.height-pkm{
+    width: 55px;
+    float: left;
+}
+
+.category-pkm{
+    width: 75px;
+    float: right;
+}
+
+.wheight-pkm{
+    width: 60px;
+    float: left;
+}
+
+.abilities-pkm{
+    width: 65px;
+    float: right;
+}
+
+.nature-icon{
+    height: 50px;
+    width: 35px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.scoreboard-title{
+    text-align: center;
+    text-transform: capitalize;
+}
+
+.btn-actions{
+    width: 110px;
+    height: 32px;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    font-size: 15px;
+    margin: 5px;
+}
+
+.evolve-btn{
+    background-color: #F06868;
+    color: white;
+}
+
+.battle-log-wrapper{
+    justify-content: center;
+    display: flex;
+    margin: 10px 0px 25px 0px;
+}
+
+.wins-btn{
+    background-color: #F7CF53;
+    color: white;
+}
+
+.losses-btn{
+    background-color: transparent;
+    border: 1px solid #F7CF53;
+}
+
+.battle-btn{
+    background-color: #F06868;
+    color: white;
+    margin: 0 auto;
+    display: block;
+}
+
+.pokemon-text, .evolve-info{
+    font-size: 13px;
+}
+
+.current-stats{
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.stats-wrapper{
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
+    align-self: baseline;
+}
+
+.stats-bar{
+    width: 28px;
+    background-color: #F7CF53;
+}
+
+.stats-name{
+    font-size: 12px;
+}
+
+.stats-caption{
+    position: absolute;
+    font-size: 7.0em;
+    text-transform: capitalize;
+    bottom: -101px;
+    color: #F3F3F3;
+    z-index: 0;
+}
+
+.ability-bar{
+    -webkit-animation: abilitygrow 1s infinite; /* Safari */
+    animation: abilitygrow 2s;
+    height: 55px;
+}
+.health-bar{
+    -webkit-animation: healthgrow 1s infinite; /* Safari */
+    animation: healthgrow 2s;
+    height: 35px;
+}
+.attack-bar{
+    -webkit-animation: attackgrow 1s infinite; /* Safari */
+    animation: attackgrow 2s;
+    height: 55px;
+}
+.defense-bar{
+    -webkit-animation: defensegrow 1s infinite; /* Safari */
+    animation: defensegrow 2s;
+    height: 35px;
+}
+.speed-bar{
+    -webkit-animation: speedgrow 1s infinite; /* Safari */
+    animation: speedgrow 2s;
+    height: 80px;
+}
+/* CSS responsável pelas divs que contem os dados dos pokemons */
+
+/* CSS responsável pelas divs que contem os dados das batalhas*/
+
+.battle-info{
+    width: 350px;
+    height: 175px;
+    border: 1px solid grey;
+    display: inline-block;
+    margin: 10px;
+}
+
+.battle-info:nth-child(1){
+    width: 250px;
+}
+
+/* CSS responsável pelas divs que contem os dados das batalhas*/
+
+/* Animações */
+
+@keyframes xpgrow{
+    from{width: 0%;}
+    to{width: 70%;}
+}
+/* Melhorias posteriores 
+
+@-webkit-keyframes abilitygrow{
+    from{height: 0%;}
+    to{height: 75%;}
+}
+
+@keyframes attackgrow{
+    from{height: 0%;}
+    to{height: 55%;}
+}
+
+@keyframes healthgrow{
+    from{height: 0%;}
+    to{height: 40%;}
+}
+
+@keyframes speedgrow{
+    from{height: 0%;}
+    to{height: 85%;}
+}
+
+@keyframes healthgrow{
+    from{height: 0%;}
+    to{height: 85%;}
+}
+
+*/
