--- a/css/style.css
+++ b/css/style.css
@@ -160,15 +160,12 @@ body, html{
 
 .pokemon-wrapper{
     width: 100%;
-    min-height: 100%;
     margin: 0 auto;
-    border: 1px solid grey;
 }
 
 .pokemon-info{
     width: 350px;
-    height: 370px;
-    border: 1px solid grey;
+    height: 355px;
     display: inline-block;
     margin: 10px;
     position: relative;
@@ -183,9 +180,8 @@ body, html{
 }
 
 .info-container{
-    border: 1px solid grey;
+
     width: 80%;
-    margin: 5px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -211,20 +207,25 @@ body, html{
     color: #6C6C6C;
 }
 
+.about-title{
+    color: #646464;
+}
+
 .attribute-wrapper{
     width: 100%;
-    height: 100px;
-    background-color: red;
+    height: 125px;
     position: absolute;
     bottom: 0;
+    font-size: 13px;
 }
 
 .pokemon-attributes{
     display: inherit;
     width: 80%;
-    height: 50px;
+    height: calc(100%/2);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 0 auto;
 }
 
@@ -232,6 +233,9 @@ body, html{
     word-break: break-word;
     margin: 0px;
     display: inline-block;
+    color: #707070;
+    height: fit-content;
+    font-size: 12px;
 }
 
 .height-pkm{
@@ -240,7 +244,7 @@ body, html{
 }
 
 .category-pkm{
-    width: 75px;
+    width: 60px;
     float: right;
 }
 
@@ -250,12 +254,12 @@ body, html{
 }
 
 .abilities-pkm{
-    width: 65px;
+    width: 60px;
     float: right;
 }
 
 .nature-icon{
-    height: 50px;
+    height: 75px;
     width: 35px;
     position: absolute;
     top: 50%;
@@ -266,6 +270,8 @@ body, html{
 .scoreboard-title{
     text-align: center;
     text-transform: capitalize;
+    color: #3C3C3C;
+    font-weight: 700;
 }
 
 .btn-actions{
@@ -297,6 +303,7 @@ body, html{
 .losses-btn{
     background-color: transparent;
     border: 1px solid #F7CF53;
+    color: #939393;
 }
 
 .battle-btn{
@@ -308,6 +315,7 @@ body, html{
 
 .pokemon-text, .evolve-info{
     font-size: 13px;
+    color: #939393;
 }
 
 .current-stats{
@@ -334,6 +342,7 @@ body, html{
 
 .stats-name{
     font-size: 12px;
+    color: #707070;
 }
 
 .stats-caption{
@@ -341,7 +350,7 @@ body, html{
     font-size: 7.0em;
     text-transform: capitalize;
     bottom: -101px;
-    color: #F3F3F3;
+    color: #ededed;
     z-index: 0;
 }
 
@@ -376,8 +385,7 @@ body, html{
 
 .battle-info{
     width: 350px;
-    height: 175px;
-    border: 1px solid grey;
+    height: 155px;
     display: inline-block;
     margin: 10px;
 }
